[package]
name = "task_feedback"
version = "0.1.0"
edition = "2021"

[features]
default = ["sync"]

sync = []
async = ["dep:async-trait", "dep:futures"]
serde = ["dep:serde"]

[dependencies]
async-trait = { version = "0.1.53", optional = true }
futures = { version = "0.3.21", optional = true }
serde = { version = "1.0.137", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }
